# beamsolve_incomplete

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.bib  CITATION.txt  LICENSE  MANIFEST.in  NOTICE.txt  README.md  README.rst  architecture.html  beam_theory.html  citation.html  examples.html  genindex.html  index.html  install.html  license.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml
_modules/: index.html
_modules/beamsolve/Analytical/: analytical_model.html  visualisation.html
_modules/beamsolve/FEM/: fem_model.html  solver.html  visualisation.html
_modules/beamsolve/beam/: beam.html
_sources/: beam_theory.rst.txt  examples.rst.txt  modules.rst.txt
_sources/examples/: clamped_free.rst.txt
beamsolve/: __init__.py
beamsolve/Analytical/: __init__.py  analytical_model.py  visualisation.py
beamsolve/FEM/: __init__.py  fem_model.py  solver.py  visualisation.py
beamsolve/beam/: __init__.py  beam.py
docs/: Makefile  requirements.txt
docs/source/: architecture.rst  citation.rst  conf.py  index.rst  install.rst  readme.rst
docs/source/architecture/: classes_beamsolve.dot  classes_beamsolve_edited.dot  edit_dot.py  packages_beamsolve.dot
docs/source/examples/: simply_supported.rst
examples/: clamped_free.html  clamped_free.py  simply_supported.html  simply_supported.py
venv_beamsolve/: pyvenv.cfg
